import 'package:flutter/foundation.dart' show immutable;

@immutable
class Strings {
  static const welcome = " Te damos la bienvenida ";
  static const enterYourInfo = " Ingresa tus datos ";
  static const nameLabel = "Nombre";
  static const ageLabel = "Edad";
  static const genderLabel = "Género";
  static const createAccount = "Crear Cuenta";
  static const ageIsRequired = "Debes ingresar tu edad";
  static const ageMustBeANumber = "Ingresa tu edad en números";
  static const nameIsRequired = "Debes ingresar tu nombre";
  static const genderIsRequired = "Debes seleccionar un género";
  static const exit = "Salir";
  static const continueWithGoogle = "Continuar con Google";
  static const continueWithFacebook = "Continuar con Faceboook";
  static const hello = "Hola";
  static const readyMale = "¿Listo";
  static const readyFemale = "¿Lista";
  static const readyNonBinary = "¿Listx";
  static const toLearnSomethingNew = "para aprender algo nuevo?";
  static const somethingWentWrong = "Ha ocurrido un error";
}
